# slotpool

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: async_boxed.rs  async_object.rs  boxed.rs  cas.rs  critical.rs  free_slots.rs  lib.rs  object.rs
tests/: pool.rs
